--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag zmani-image:$(date +%s)
+      run: |
+        echo ---Building and starting up docker---
+        docker docker-compose -f ./Project/docker-compose.yml -p testing
+        echo ---Containers up---
+
